--- a/packages/common/src/styles/slick-grid.scss
+++ b/packages/common/src/styles/slick-grid.scss
@@ -6,13 +6,22 @@
 // ----------------------------------------------
 
 @keyframes fade {
-  0%, 100% { background: none }
-  50% { background: var(--slick-row-highlight-background-color, v.$slick-row-highlight-background-color) }
+  0%,
+  100% {
+    background: none;
+  }
+  50% {
+    background: var(--slick-row-highlight-background-color, v.$slick-row-highlight-background-color);
+  }
 }
 
 @keyframes slickgrid-invalid-highlight {
-  from { box-shadow: 0 0 6px red; }
-  to { box-shadow: none; }
+  from {
+    box-shadow: 0 0 6px red;
+  }
+  to {
+    box-shadow: none;
+  }
 }
 
 .full-height {
@@ -58,7 +67,7 @@
   // needs a selection checbox column. Bootstrap gives
   // these elements a 4px top margin, which we have to reset
   // by aligning to baseline.
-  input[type="checkbox"] {
+  input[type='checkbox'] {
     vertical-align: baseline;
     margin: 0;
   }
@@ -157,7 +166,10 @@
         background-color: var(--slick-row-based-edit-editmode-hover-bgcolor, v.$slick-row-based-edit-editmode-hover-bgcolor);
 
         .active {
-          background-color: var(--slick-row-based-edit-editmode-active-hover-bgcolor, v.$slick-row-based-edit-editmode-active-hover-bgcolor) !important;
+          background-color: var(
+            --slick-row-based-edit-editmode-active-hover-bgcolor,
+            v.$slick-row-based-edit-editmode-active-hover-bgcolor
+          ) !important;
         }
       }
 
@@ -165,7 +177,10 @@
         background-color: var(--slick-row-based-edit-editmode-active-bgcolor, v.$slick-row-based-edit-editmode-active-bgcolor);
 
         &:hover {
-          background-color: var(--slick-row-based-edit-editmode-active-hover-bgcolor, v.$slick-row-based-edit-editmode-active-hover-bgcolor);
+          background-color: var(
+            --slick-row-based-edit-editmode-active-hover-bgcolor,
+            v.$slick-row-based-edit-editmode-active-hover-bgcolor
+          );
         }
       }
     }
@@ -213,7 +228,10 @@
         background-color: var(--slick-row-based-edit-editmode-hover-bgcolor, v.$slick-row-based-edit-editmode-hover-bgcolor);
 
         .active {
-          background-color: var(--slick-row-based-edit-editmode-active-hover-bgcolor, v.$slick-row-based-edit-editmode-active-hover-bgcolor) !important;
+          background-color: var(
+            --slick-row-based-edit-editmode-active-hover-bgcolor,
+            v.$slick-row-based-edit-editmode-active-hover-bgcolor
+          ) !important;
         }
       }
 
@@ -221,7 +239,10 @@
         background-color: var(--slick-row-based-edit-editmode-active-bgcolor, v.$slick-row-based-edit-editmode-active-bgcolor);
 
         &:hover {
-          background-color: var(--slick-row-based-edit-editmode-active-hover-bgcolor, v.$slick-row-based-edit-editmode-active-hover-bgcolor);
+          background-color: var(
+            --slick-row-based-edit-editmode-active-hover-bgcolor,
+            v.$slick-row-based-edit-editmode-active-hover-bgcolor
+          );
         }
       }
     }
@@ -303,7 +324,7 @@
     ::-webkit-scrollbar-thumb {
       border-radius: 4px;
       border: 2px solid white; /* should match background, can't be transparent */
-      background-color: rgba(0, 0, 0, .5);
+      background-color: rgba(0, 0, 0, 0.5);
     }
   }
   .slick-header,
@@ -386,7 +407,7 @@
   }
 
   .slick-header.slick-state-default {
-    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   }
 
   .slick-column-name {
@@ -470,7 +491,8 @@
   }
 
   .grid-canvas {
-    .slick-cell, .slick-headerrow-column {
+    .slick-cell,
+    .slick-headerrow-column {
       border-top: var(--slick-cell-border-top, v.$slick-cell-border-top);
       border-bottom: var(--slick-cell-border-bottom, v.$slick-cell-border-bottom);
       border-left: var(--slick-cell-border-left, v.$slick-cell-border-left);
@@ -488,10 +510,14 @@
         background-color: var(--slick-row-based-edit-unsaved-cell-bgcolor, v.$slick-row-based-edit-unsaved-cell-bgcolor) !important;
       }
 
-      a, a:visited, .slick-widget-content a, .slick-widget-content a:visited {
+      a,
+      a:visited,
+      .slick-widget-content a,
+      .slick-widget-content a:visited {
         color: var(--slick-link-color, v.$slick-link-color);
       }
-      a:hover, .slick-widget-content a:hover {
+      a:hover,
+      .slick-widget-content a:hover {
         color: var(--slick-link-color-hover, v.$slick-link-color-hover);
         border-bottom: none;
       }
@@ -568,6 +594,8 @@
     .slick-headerrow-columns {
       .slick-headerrow-column {
         border: none;
+        display: inline-flex;
+        align-items: center;
         padding: var(--slick-header-row-filter-padding, v.$slick-header-row-filter-padding);
         background: var(--slick-header-row-background-color, v.$slick-header-row-background-color);
       }
@@ -603,7 +631,7 @@
     background-color: var(--slick-header-background-color, v.$slick-header-background-color);
     width: calc(100% - #{var(--slick-header-scroll-width-to-remove, v.$slick-header-scroll-width-to-remove)});
 
-    [id$="checkbox_selector"] {
+    [id$='checkbox_selector'] {
       justify-content: center;
       display: flex;
     }
@@ -628,7 +656,7 @@
         margin-right: var(--slick-header-column-name-margin-right, v.$slick-header-column-name-margin-right);
       }
 
-      @mixin ResetColumns () {
+      @mixin ResetColumns() {
         /* like TH  */
         & {
           background: var(--slick-header-background-color, v.$slick-header-background-color);
@@ -637,7 +665,8 @@
           font-size: var(--slick-header-font-size, v.$slick-header-font-size);
           font-weight: var(--slick-header-font-weight, v.$slick-header-font-weight);
         }
-        a, a:visited {
+        a,
+        a:visited {
           color: var(--slick-text-color, v.$slick-text-color);
         }
         a:hover {
@@ -645,9 +674,9 @@
         }
       }
 
-      @include ResetColumns ();
+      @include ResetColumns();
       &.slick-state-default {
-        @include ResetColumns ();
+        @include ResetColumns();
       }
 
       &.slick-header-column-sorted {
@@ -658,7 +687,7 @@
         color: var(--slick-hover-header-color, v.$slick-hover-header-color);
       }
 
-      .slick-sort-indicator ,
+      .slick-sort-indicator,
       .slick-sort-indicator-numbered {
         display: inline-block;
         position: absolute;
